fix rating image getting big on mobile

--- a/style.css
+++ b/style.css
@@ -514,5 +514,12 @@ li h3 {
         white-space: nowrap;
         width: 250px;
     }
+    .movie-info img{
+        margin: 0px;
+        margin-right: 10px;
+        padding: 0;
+        width: 16px;
+    
+    }
 
 }
